--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "PICC在线理赔",
+    "navigationBarTitleText": "一站式报案理赔",
     "navigationBarTextStyle": "black"
   }
 }
