--- a/project.config.json
+++ b/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.2.3",
-	"appid": "wx00c275c6be7f2cc7",
-	"projectname": "PICC%E5%9C%A8%E7%BA%BF%E6%A1%88%E4%BB%B6%E5%A4%84%E7%90%86",
+	"appid": "wx598bc18568fb1517",
+	"projectname": "%E4%B8%80%E7%AB%99%E5%BC%8F%E6%8A%A5%E6%A1%88%E7%90%86%E8%B5%94",
 	"condition": {
 		"search": {
 			"current": -1,
